# detailer

./: Cargo.toml  README.md
.github/workflows/: pr.yaml  release.yaml
benches/: bench_main.rs
benches/benchmarks/: detailer_bench.rs  mod.rs
src/: detailer.rs  lib.rs
